# fluprodia

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  spacing.ipynb  tox.ini
.github/: FUNDING.yml
.github/workflows/: packaging.yml  tox_checks.yml  tox_pytest.yml
ci/templates/: .travis.yml  tox.ini
doc/: conf.py
docs/: README.rst  conf.py  diagrams.py  index.rst  installation.rst  readme.rst  requirements.txt  usage.rst
docs/reference/: fluprodia.rst  index.rst  tespy.plotting.rst
fluprodia/: __init__.py  statesdiagram.py
src/fluprodia/: __init__.py  _units.py  _utils.py  _version.py  fluid_property_diagram.py
tespy.plotting/: __init__.py
tests/: test_errors.py  test_fluid_property_diagram.py  test_fluprodia.py  test_units.py
