[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "CHANGELOG.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "docs/",
    "tests/",
]
exclude = ["docs/_build"]

[project]
name = "fluprodia"
version = "2.2"
description = "Create beautiful fluid property diagrams using CoolProp and matplotlib"
readme = "README.rst"
authors = [
    {name = "Francesco Witte", email = "tespy@witte.sh"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "CoolProp>=6.4,<7",
    "numpy>=1.13.3,<2",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/fwitte/fluprodia"
Documentation = "https://fluprodia.readthedocs.io/"
Changelog = "https://fluprodia.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/fwitte/fluprodia/issues"

[project.optional-dependencies]
dev = [
    "build",
    "flit",
    "furo",
    "matplotlib",
    "pytest",
    "sphinx>=7.2.2",
    "sphinx-copybutton",
    "sphinx-design",
    "tespy"
]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\"*.rst\"
    --tb=short
    --pyargs
    --ignore=docs/conf.py
    --ignore=docs/scripts
"""
testpaths = [
    "src/",
    "tests/",
    "docs/",
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "fluprodia"
default_section = "THIRDPARTY"
forced_separate = "test_fluprodia"
skip = "migrations"
